# GF

./: .authorspellings  .ghci  .gitignore  .travis.yml  GF.cabal  LICENSE  Makefile  README  README.md  Setup.hs  WebSetup.hs  build-binary-dist.sh  default.nix  download.html  gf-summer-school-2013.html  gf.cabal  gf.nix  homepage.html  index-3.html  index-3.txt  index.html  index.txt  new.html  tmp-download.html
src/: FILES  GF-embed.cabal  GF.hs  GFC.hs  GFI.hs  HelpFile  HelpFile.hs  INSTALL  INSTALL.binary  Makefile  Makefile.binary  PGF.hs  ReleaseProcedure  Today.hs  config.mk.in  config.sub  configure.ac  gf.spec  gf.wxs.in  gf_atk.cfg  gfc.in  gfeditor.in  jgf.in  module-structure.txt
src/Data/: Binary.hs
src/Data/Binary/: Get.hs  Put.hs
src/GF/: API.hs  Compile.hs  GFModes.hs  Grammar.hs  Quiz.hs  Shell.hs
src/GF/API/: BatchTranslate.hs  GrammarToHaskell.hs  GrammarToTransfer.hs  IOGrammar.hs  MyParser.hs
src/GF/CF/: CF.hs  CFIdent.hs  CFtoGrammar.hs  CFtoSRG.hs  CanonToCF.hs  ChartParser.hs  EBNF.hs  PPrCF.hs  PrLBNF.hs  Profile.hs
src/GF/CFGM/: AbsCFG.hs  CFG.cf  LexCFG.hs  LexCFG.x  ParCFG.hs  ParCFG.y  PrintCFG.hs  PrintCFGrammar.hs
src/GF/Canon/: AbsGFC.hs  AbsToBNF.hs  CMacros.hs  CanonToGFCC.hs  CanonToGrammar.hs  CanonToJS.hs  GFC.cf  GFC.hs  GetGFC.hs  LexGFC.hs  LexGFC.x  Look.hs  MkGFC.hs  ParGFC.hs  ParGFC.y  PrExp.hs  PrintGFC.hs  Share.hs  SkelGFC.hs  Subexpressions.hs  TestGFC.hs  Unlex.hs  log.txt
src/GF/Command/: AbsGFShell.hs  Abstract.hs  Commands.hs  ErrM.hs  Importing.hs  Interpreter.hs  PPrTree.hs  ParGFShell.hs  Parse.hs  TreeOperations.hs
src/GF/Compile/: API.hs  AbsCompute.hs  BackOpt.hs  CheckGrammar.hs  Coding.hs  Compile.hs  Compute.hs  Evaluate.hs  Export.hs  Extend.hs  Flatten.hs  GFCCtoHaskell.hs  GFCCtoJS.hs  GFCCtoProlog.hs  GenerateFCFG.hs  GeneratePMCFG.hs  GetGrammar.hs  GrammarToCanon.hs  GrammarToGFCC.hs  MkConcrete.hs  MkResource.hs  MkUnion.hs  ModDeps.hs  NewRename.hs  NoParse.hs  Optimize.hs  OptimizeGF.hs  OptimizeGFCC.hs  PGFPretty.hs  PGrammar.hs  PrOld.hs  ReadFiles.hs  Rebuild.hs  Refresh.hs  RemoveLiT.hs  Rename.hs  ShellState.hs  SubExOpt.hs  TC.hs  TypeCheck.hs  (+2 more)
src/GF/Conversion/: FTypes.hs  GFC.hs  GFCtoSimple.hs  MCFGtoCFG.hs  MCFGtoFCFG.hs  Prolog.hs  RemoveEpsilon.hs  RemoveErasing.hs  RemoveSingletons.hs  SimpleToFCFG.hs  SimpleToFinite.hs  SimpleToMCFG.hs  TypeGraph.hs  Types.hs
src/GF/Data/: Assoc.hs  BacktrackM.hs  Compos.hs  ErrM.hs  GeneralDeduction.hs  Glue.hs  Graphviz.hs  IncrementalDeduction.hs  Map.hs  MultiMap.hs  Operations.hs  OrdMap2.hs  OrdSet.hs  Parsers.hs  RedBlack.hs  Relation.hs  SharedString.hs  SortedList.hs  Str.hs  Trie.hs  Trie2.hs  TrieMap.hs  Utilities.hs  XML.hs  Zipper.hs
src/GF/Devel/: CheckGrammar.hs  CheckM.hs  Compile.hs  Compute.hs  GF3.hs  GFC.hs  GFCCtoHaskell.hs  GFCCtoJS.hs  GetGrammar.hs  GrammarToGFCC.hs  Judgements.hs  Lookup.hs  Macros.hs  MkJudgements.hs  Modules.hs  Optimize.hs  OptimizeGF.hs  OptimizeGFCC.hs  Options.hs  PrGrammar.hs  PrintGFCC.hs  README-testgf3  ReadFiles.hs  Shell.hs  TC.hs  Terms.hs  TestGF3.hs  UseIO.hs  gf3.txt
src/GF/Embed/: EmbedAPI.hs  EmbedParsing.hs
src/GF/FCFG/: AbsFCFG.hs  FCFG.cf  FromFCFG.hs  LexFCFG.hs  ParFCFG.hs  PrintFCFG.hs  ToFCFG.hs
src/GF/Formalism/: CFG.hs  FCFG.hs  GCFG.hs  MCFG.hs  SimpleGFC.hs  Symbol.hs  Utilities.hs
src/GF/Fudgets/: ArchEdit.hs  CommandF.hs  EventF.hs  FudgetOps.hs  UnicodeF.hs
src/GF/GFCC/: API.hs  AbsGFCC.hs  CheckGFCC.hs  DataGFCC.hs  ErrM.hs  GFCC.cf  Generate.hs  LexGFCC.hs  Linearize.hs  Macros.hs  OptimizeGFCC.hs  ParGFCC.hs  PrintGFCC.hs  ShowLinearize.hs  SkelGFCC.hs  TestGFCC.hs
src/GF/Grammar/: API.hs  AbsCompute.hs  Abstract.hs  AppPredefined.hs  Binary.hs  CF.hs  Compute.hs  Grammar.hs  Lexer.hs  Lexer.x  Lockfield.hs  LookAbs.hs  Lookup.hs  MMacros.hs  Macros.hs  Parser.hs  Parser.y  PatternMatch.hs  PrGrammar.hs  Predef.hs  Printer.hs  Refresh.hs  ReservedWords.hs  TC.hs  TypeCheck.hs  Unify.hs  Values.hs
src/GF/IDE/: IDECommands.hs
src/GF/Infra/: CheckM.hs  Comments.hs  CompactPrint.hs  Dependencies.hs  Ident.hs  Modules.hs  Option.hs  Print.hs  PrintClass.hs  ReadFiles.hs  UseIO.hs
src/GF/JavaScript/: AbsJS.hs  ErrM.hs  JS.cf  LexJS.hs  LexJS.x  Makefile  ParJS.hs  ParJS.y  PrintJS.hs  SkelJS.hs  TestJS.hs
src/GF/OldParsing/: CFGrammar.hs  ConvertFiniteGFC.hs  ConvertFiniteSimple.hs  ConvertGFCtoMCFG.hs  ConvertGFCtoSimple.hs  ConvertGrammar.hs  (+11 more)
src/JavaGUI/: DynamicTree.java  DynamicTree2.java  GFEditor.java  GFEditor2.java  GrammarFilter.java  LinPosition.java  MarkedArea.java  Numerals.java  Utils.java  manifest.txt  runNumerals
src/PGF/: AbsCompute.hs  Binary.hs  BuildParser.hs  CId.hs  Check.hs  Data.hs  Editor.hs  Expr.hs  Expr.hs-boot  Generate.hs  Linearize.hs  Macros.hs  PMCFG.hs  Paraphrase.hs  Quiz.hs  ShowLinearize.hs  Tree.hs  Type.hs  TypeCheck.hs  VisualizeTree.hs
src/Transfer/: CompilerAPI.hs  ErrM.hs  Interpreter.hs  InterpreterAPI.hs  SyntaxToCore.hs
src/compiler/: GF.hs  GFC.hs  GFI.hs  GFServer.hs  GFTags.hs
src/example-based/: ExampleDemo.hs  ExampleService.hs  exb-fcgi.hs  gf-exb.cabal  todo.txt
src/exper/: EditShell.hs  Evaluate.hs  Optimize.hs
src/haddock/: haddock-check.perl  haddock-script.csh
src/morpho-server/: Makefile  MorphoServer.hs  README  URLEncoding.hs  gf-morpo-server.cabal
src/pgf-binary/: pgf-binary.cabal
src/programs/: gf-main.hs
src/server/: CGI.hs  CGIUtils.hs  Cache.hs  ContentService.hs  FastCGIUtils.hs  MainFastCGI.hs  Makefile  MorphoService.hs  PGFService.hs  README  RunHTTP.hs  ServeStaticFile.hs  Setup.hs  URLEncoding.hs  gf-client.html  gf-server-jsapi.js  gf-server.cabal  grammar.pgf  lighttpd.conf  pgf-http.hs  pgf-server.cabal  simple-client.html  translator.css  translator.js
src/tools/: AlphaConvGF.hs  GFDoc.hs  Htmls.hs  MkHelpFile.hs  MkToday.hs  Multi.hs  WriteF.hs  dark-filetypes.GF.conf  gf-tools.cabal  gf.el  gf.lang  light-filetypes.GF.conf  mktoday.sh
src/www/: cloud.css  gf-cloud-api.html  gf-web-api-examples.html  gf-web-api.t2t  index.html  robots.txt  wc.html
(+9549 files in other folders)
